--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
   color: grey;
 }
 .navbar-default .navbar-brand {
-  color: #FFF !important;
+  color: #000 !important;
   font-weight: 700 !important;
 }
 
