+ label line height

--- a/style.css
+++ b/style.css
@@ -14,6 +14,19 @@
 */
 @import url("https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
 
+.label {
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 75%;
+  font-weight: bold;
+  line-height: 1.8;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
+}
+
 .navbar-default .navbar-nav>li>a {
   color: #080808 !important;
   font-weight: 700 !important;
