+ label line height

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   padding: .2em .6em .3em;
   font-size: 75%;
   font-weight: bold;
-  line-height: 1.8;
+  line-height: 1.8 !important;
   color: #fff;
   text-align: center;
   white-space: nowrap;
