chanced valid icon to check

--- a/prototype1/templates/gp-valid-cell.html
+++ b/prototype1/templates/gp-valid-cell.html
@@ -1,2 +1,2 @@
-<i class="fa fa-2x fa-close fa-fw text-success" ng-if="validRow"></i>
+<i class="fa fa-2x fa-check fa-fw text-success" ng-if="validRow"></i>
 <i class="fa fa-2x fa-close fa-fw text-danger" ng-if="!validRow"></i>
