- Adding a gpSuggestionCell directive - Minor fixes

--- a/prototype1/templates/gpWebsiteGrid.html
+++ b/prototype1/templates/gpWebsiteGrid.html
@@ -32,15 +32,7 @@
                 <gp-nallowed-cell password="password" row-object="row"></gp-nallowed-cell>
             </td>
             <td data-title="suggestion">
-                <div class="input-group generator">
-                    <input type="text" class="form-control" value="banana4.2X" placeholder="Some path"
-                           id="copy-input"></input>
-                    <span class="input-group-btn">
-                        <button class="btn btn-info" type="button" id="copy-button" data-toggle="tooltip"
-                                data-placement="button" title="Copy to Clipboard">Copy
-                        </button>
-                    </span>
-                </div>
+                <gp-suggestion-cell password="password" row-object="row"></gp-suggestion-cell>
             </td>
         </tr>
         </tbody>
