Working counter for valid and invalid passwords

--- a/prototype1/templates/gpValidCounter.html
+++ b/prototype1/templates/gpValidCounter.html
@@ -1,4 +1,4 @@
 <span>
-    <span class="label label-default">{{validCount}}</span>
-    <span class="label label-success">{{invalideCount}}</span>
+    <span class="label label-success">{{validCount}}</span>
+    <span class="label label-default">{{invalideCount}}</span>
 </span>
