--- a/prototype1/templates/gpWebsiteGrid.html
+++ b/prototype1/templates/gpWebsiteGrid.html
@@ -32,7 +32,7 @@
                 <gp-nallowed-cell password="password" row-object="row" index="$index"></gp-nallowed-cell>
             </td>
             <td data-title="suggestion">
-                <gp-suggestion-cell row-object="row" password="password" index="$index" ng-if="showSuggestions[$index]==true"></gp-suggestion-cell>
+                <gp-suggestion-cell row-object="row" password="password" index="$index"></gp-suggestion-cell>
             </td>
         </tr>
         </tbody>
