--- a/style.css
+++ b/style.css
@@ -1,5 +1,43 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Lato');
 
+.activeflag{
+  outline: solid #2f2f2f 2px !important;
+}
+
+.disabledflag {
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: .65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.flag--spain, .flag--switzerland, .flag--uk, .flag--japan, .flag--usa, .flag--ireland, .flag--italy, .flag--belgium, .flag--france, .flag--romania, .flag--germany, .flag--russia, .flag--bulgaria, .flag--netherlands, .flag--lithuania, .flag--austria, .flag--hungary, .flag--estonia, .flag--bolivia, .flag--poland, .flag--ukraine, .flag--denmark, .flag--iceland, .flag--norway, .flag--finland, .flag--sweden {
+  margin:2px;
+  width: 48px;
+  height: 30px;
+  border: 1px solid #999;
+  display: inline-block;
+  box-shadow: 1px 1px 1px #CCC;
+  transition: all .5s;
+}
+
+
+.flag--germany {
+  background: linear-gradient(-180deg, black 33.3%, red 33.3%, red 66.6%, gold 66.6%);
+}
+
+.flag--netherlands {
+  background: linear-gradient(-180deg, red 33.3%, white 33.3%, white 66.6%, mediumblue 66.6%);
+}
+
+
+.flag--uk {
+  background: linear-gradient(90deg, transparent 46%, red 46%, red 56%, transparent 56%), linear-gradient(transparent 38%, white 38%, white 42%, red 42%, red 58%, white 58%, white 62%, transparent 62%), linear-gradient(90deg, transparent 44%, white 44%, white 46%, red 46%, red 56%, white 56%, white 58%, transparent 58%), linear-gradient(33deg, transparent 45%, white 45%, white 48%, red 48%, red 54%, white 54%, white 57%, transparent 57%), linear-gradient(-33deg, mediumblue 45%, white 45%, white 48%, red 48%, red 54%, white 54%, white 57%, mediumblue 57%);
+}
+
+
 .show{
   visibility: visible !important;
 }
